// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<table
  className="MuiTable-root-1"
>
  <tr
    aria-checked={false}
    className="MuiTableRow-root-2 MuiTableRow-hover-4"
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingCheckbox-13"
      onClick={[Function]}
    >
      <span
        className="MuiButtonBase-root-30 MuiIconButton-root-24 MuiSwitchBase-root-20 MuiCheckbox-root-15 MuiCheckbox-colorPrimary-18"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-29"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <input
            checked={false}
            className="MuiSwitchBase-input-23"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-38"
        />
      </span>
    </td>
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      onClick={[Function]}
    >
      Leanne Graham
    </td>
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      onClick={[Function]}
    >
      Bret
    </td>
  </tr>
</table>
`;

exports[`renders highlighted 1`] = `
<table
  className="MuiTable-root-1"
>
  <tr
    aria-checked={true}
    className="MuiTableRow-root-2 MuiTableRow-hover-4 MuiTableRow-selected-3"
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingCheckbox-13"
      onClick={[Function]}
    >
      <span
        className="MuiButtonBase-root-30 MuiIconButton-root-24 MuiSwitchBase-root-20 MuiCheckbox-root-15 MuiCheckbox-colorPrimary-18 MuiSwitchBase-checked-21 MuiCheckbox-checked-16"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-29"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiSwitchBase-input-23"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-38"
        />
      </span>
    </td>
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span style=\\"background-color: yellow;\\">Lea</span>nne Graham",
        }
      }
      onClick={[Function]}
    />
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Leanne Graham",
        }
      }
      onClick={[Function]}
    />
  </tr>
</table>
`;

exports[`renders selected 1`] = `
<table
  className="MuiTable-root-1"
>
  <tr
    aria-checked={true}
    className="MuiTableRow-root-2 MuiTableRow-hover-4 MuiTableRow-selected-3"
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex={-1}
  >
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingCheckbox-13"
      onClick={[Function]}
    >
      <span
        className="MuiButtonBase-root-30 MuiIconButton-root-24 MuiSwitchBase-root-20 MuiCheckbox-root-15 MuiCheckbox-colorPrimary-18 MuiSwitchBase-checked-21 MuiCheckbox-checked-16"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-29"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-32"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <input
            checked={true}
            className="MuiSwitchBase-input-23"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root-38"
        />
      </span>
    </td>
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      onClick={[Function]}
    >
      Leanne Graham
    </td>
    <td
      aria-sort={null}
      className="MuiTableCell-root-7 MuiTableCell-paddingNone-14"
      onClick={[Function]}
    >
      Bret
    </td>
  </tr>
</table>
`;
